--- a/assignment.tex
+++ b/assignment.tex
@@ -59,8 +59,7 @@
 
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
-\section{MCQ with One Correct Answer}
-\begin{enumerate}
+\begin{enumerate}[start=9]
 \item The slope of tangent to curve y=$f(x)$ at [x,$f(x)$] is $2x + 1$.If the curve passes through the point $(1,2)$, then the area bounded by curve, the $x$ axis and the line $x=1$ is
 \hfill {(1995S) }
 \begin{enumerate}
