--- a/assignment.tex
+++ b/assignment.tex
@@ -61,15 +61,15 @@
 \renewcommand{\thetable}{\theenumi}
 \begin{enumerate}[start=9]
 	\item The slope of tangent to curve $y=f\brak{x}$ at $\brak{x,f\brak{x}}$ is $2x + 1$.If the curve passes through the point $\brak{1,2}$, then the area bounded by curve, the $x$ axis and the line $x=1$ is
-\hfill \brak{1995S}
+\hfill (1995S)
 \begin{enumerate}
-    \item $\displaystyle\frac{5}{6}$\\ 
-    \item $\displaystyle\frac{6}{5}$\\
-    \item $\displaystyle\frac{1}{6}$\\ 
+    \item $\frac{5}{6}$\\ 
+    \item $\frac{6}{5}$\\
+    \item $\frac{1}{6}$\\ 
     \item $6$\\
 \end{enumerate}
-\item If $f\brak{x}=\displaystyle\frac{x}{\sin{x}}$ and $g\brak{x}=\displaystyle\frac{x}{\tan{x}}$, where$0<x\leq1$, then in this interval
-	\hfill \brak{1997-2 Marks}
+\item If $f\brak{x}=\frac{x}{\sin{x}}$ and $g\brak{x}=\frac{x}{\tan{x}}$, where$0<x\leq1$, then in this interval
+	\hfill (1997-2 Marks)
 \begin{enumerate}
 	\item both $f\brak{x}$ and $g\brak{x}$ are increasing functions.
 	\item both $f\brak{x}$ and $g\brak{x}$ are decreasing functions.
@@ -78,38 +78,37 @@
 \end{enumerate}
 
 \item The function $f\brak{x}= \sin^4{x}+\cos^4{x}$ increases \\
-	if \hfill \brak{1999-2 Marks}
+	if \hfill (1999-2 Marks)
 \begin{enumerate}
-    \item $0<x<\displaystyle\frac{\pi}{8}$\\
-    \item $\displaystyle\frac{\pi}{4}<x<\displaystyle\frac{3\pi}{8}$\\
-    \item $\displaystyle\frac{3\pi}{8} <x<\displaystyle\frac{5\pi}{8}$\\
-    \item $\displaystyle\frac{5\pi}{8}<x<\displaystyle\frac{3\pi}{4}$\\
+    \item $0<x<\frac{\pi}{8}$\\
+    \item $\frac{\pi}{4}<x<\frac{3\pi}{8}$\\
+    \item $\frac{3\pi}{8} <x<\frac{5\pi}{8}$\\
+    \item $\frac{5\pi}{8}<x<\frac{3\pi}{4}$\\
 \end{enumerate}
 \item Consider the following statements in S and \\
-R \hfill \brak{2000S}\\
-S: Both $\sin{x}$ and $\cos{x}$ are decreasing functions in the interval $\left(\displaystyle\frac{\pi}{2},\pi\right)$\\
-R: If a differentiable function decreases in a interval $\brak{a,b}$,then its derivative also decreases in $\brak{a,b}$.\\
+R \hfill (2000S)\\
+S: Both $\sin{x}$ and $\cos{x}$ are decreasing functions in the interval $\left(\frac{\pi}{2},\pi\right)$\: If a differentiable function decreases in a interval $\brak{a,b}$,then its derivative also decreases in $\brak{a,b}$.\\
 Which of the following is true ?
 \begin{enumerate}
     \item Both S and R are wrong.
     \item Both S and R are correct, but R is not the correct explanation of S.
     \item S is correct and R is correct explanation for S.
     \item S is correct and R is wrong.\\
-\end{enumerate}
+s\end{enumerate}
 
 \item Let $f\brak{x}=\int e^x\brak{x-1}\brak{x-2}dx$. Then $f$ decreases in the interval 
-\hfill \brak{(2000S)}
+\hfill (2000S)
 \begin{enumerate}
 	\item $\brak{-\infty,-2}$
 	\item $\brak{-2,-1}$
 	\item $\brak{1,2}$
 	\item $\brak{2,+\infty}$\\
 \end{enumerate}
-\item If normal to curve $y=f\brak{x}$ at the point $\brak{3,4}$ makes an angle $\displaystyle\frac{3\pi}{4}$ with the positive $x$-axis, then $f$'\brak{3} = \hfill\brak{2000S}
+\item If normal to curve $y=f\brak{x}$ at the point $\brak{3,4}$ makes an angle $\frac{3\pi}{4}$ with the positive $x$-axis, then $f$'\brak{3} = \hfill(2000S)
 \begin{enumerate}
     \item $-1$
-    \item -$\displaystyle\frac{3}{4}$\\
-    \item $\displaystyle\frac{4}{3}$
+    \item -$\frac{3}{4}$\\
+    \item $\frac{4}{3}$
     \item $1$
 \end{enumerate}
 \item Let $f\brak{x}$=
@@ -117,7 +116,7 @@ $\begin{cases}
 |x|, & \text{for}  0<|x| \leq 2\\ 
 1, & \text{for}\  x=0
 \end{cases}$then at $x=0$, \\$f$ has
-\hfill \brak{2000S}
+\hfill (2000S)
 \begin{enumerate}
     \item a local maximum
     \item no local maximum
@@ -125,7 +124,7 @@ $\begin{cases}
     \item no extremum\\
 \end{enumerate}
 \item For all $x\in\brak{0,1}$
-\hfill \brak{2000S}
+\hfill (2000S)
 \begin{enumerate}
     \item $e^x <1+x$
     \item $\log_e \brak{1+x} < x$
@@ -133,16 +132,16 @@ $\begin{cases}
     \item$\log_e{x} > x $\\
 \end{enumerate}
 \item If $f\brak{x}=xe^{x\brak{1-x}}$,then $f\brak{x}$ is 
-\hfill \brak{2001S}
+\hfill (2001S)
 \begin{enumerate}
-    \item increasing on $\sbrak{-\displaystyle\frac{1}{2},1}$\\
+    \item increasing on $\sbrak{-\frac{1}{2},1}$\\
     \item decreasing on R
     \item increasing on R
-    \item decreasing on $\sbrak{-\displaystyle\frac{1}{2},1}$\\
+    \item decreasing on $\sbrak{-\frac{1}{2},1}$\\
 \end{enumerate}
 
 \item The triangle formed by tangent to curve $f\brak{x}=x^2+bx-b$ at the point $\brak{1,1}$ and the coordinate axes, lies in the first quadrant. If its area is $2$, then the value of $b$ is 
-\hfill \brak{2001S}
+\hfill (2001S)
 \begin{enumerate}
     \item $-1$
     \item $3$ 
@@ -150,54 +149,55 @@ $\begin{cases}
     \item $1$\\
 \end{enumerate}
 \item Let $f\brak{x}=\brak{1+b^2}x^2+2bx+1$ and let $m\brak{b}$ be the minimum value of $f\brak{x}$.As $b$ varies, the range of $m\brak{b}$ is 
-\hfill \brak{2001S}
+\hfill (2001S)
 \begin{enumerate}
 	\item $\sbrak{0,1}$\\
-	\item $\lbrak{0},\rsbrak{\displaystyle\frac{1}{2}}$\\
-	\item $\sbrak{\displaystyle\frac{1}{2},1}$\\
+	\item $\lbrak{0},\rsbrak{\frac{1}{2}}$\\
+	\item $\sbrak{\frac{1}{2},1}$\\
 	\item $\lbrak{0},\rsbrak{1}$\\
 \end{enumerate}
 \item The length of a longest interval in which the function $3 \sin{x}-4\sin^3{x}$ is increasing,\\
-is \hfill \brak{2002S}
+is \hfill (2002S)
 \begin{enumerate}
-    \item $\displaystyle\frac{\pi}{3}$\\
-    \item $\displaystyle\frac{\pi}{2}$\\
-    \item $\displaystyle\frac{3\pi}{2}$\\
+    \item $\frac{\pi}{3}$\\
+    \item $\frac{\pi}{2}$\\
+    \item $\frac{3\pi}{2}$\\
     \item $\pi$
 \end{enumerate}
-\item The point\brak{s} on the curve $y^3+3x^2=12y$ where the tangent is vertical, is\brak{are}
-\hfill \brak{2002S}\\
+\item The point(s) on the curve $y^3+3x^2=12y$ where the tangent is vertical, is(are)
+\hfill (2002S)\\
 \begin{enumerate}
-	\item $\brak{\pm \displaystyle\frac{4}{\sqrt{3}},-2}$\\
-	\item $\brak{\pm\sqrt{\displaystyle\frac{11}{3}},1}$\\
+	\item $\brak{\pm \frac{4}{\sqrt{3}},-2}$\\
+	\item $\brak{\pm\sqrt{\frac{11}{3}},1}$\\
 	\item $\brak{0,0}$\\
-	\item $\brak{\pm \displaystyle\frac{4}{\sqrt{3}},2}$\\\\
+	\item $\brak{\pm \frac{4}{\sqrt{3}},2}$\\\\
 \end{enumerate}
 
 \item In $\sbrak{0,1}$ Lagranges Mean Value theorem is NOT applicable to
-\hfill \brak{2003S}
+\hfill (2003S)
 
 \begin{enumerate}
     \item $f\brak{x}$=
     $\begin{cases}
-         \displaystyle\frac{1}{2}-x, x<\displaystyle\frac{1}{2}\\
-	    \brak{\displaystyle\frac{1}{2}-x}^2, x\geq \displaystyle\frac{1}{2}
+         \frac{1}{2}-x, x<\frac{1}{2}\\
+	    \brak{\frac{1}{2}-x}^2, x\geq \frac{1}{2}
     \end{cases}$\\
     \item $f\brak{x}$=
     $\begin{cases}
-	    \displaystyle\frac{\sin{x}}{x}, x\neq 0\\
+	    \frac{\sin{x}}{x}, x\neq 0\\
         1, x=0
     \end{cases}$\\
     \item $f\brak{x}=x|x|$
     \item $f\brak{x}=|x|$\\
 \end{enumerate}
-\item Tangent is drawn to ellipse $\displaystyle\frac{x^2}{27}+y^2 = 1$ at $\brak{3\sqrt{3}\cos{\theta},\sin{\theta}}$ $\brak{\text{where}  \theta \in \brak{0,\displaystyle\frac{\pi}{2}}}$. Then the value of $\theta$ such that sum of intercepts on axes made by this tangent is minimum, is
-\hfill \brak{2003S}
+\item Tangent is drawn to ellipse $\frac{x^2}{27}+y^2 = 1$ at $\brak{3\sqrt{3}\cos{\theta},\sin{\theta}}$ $\brak{\text{where}  \theta \in \brak{0,\frac{\pi}{2}}}$. Then the value of $\theta$ such that sum of intercepts on axes made by this tangent is minimum, is
+\hfill (2003S)
 \begin{enumerate}
-    \item $\displaystyle\frac{\pi}{3}$\\
-    \item $\displaystyle\frac{\pi}{6}$\\
-    \item $\displaystyle\frac{\pi}{8}$\\
-    \item $\displaystyle\frac{\pi}{4}$\\
+    \item $\frac{\pi}{3}$\\
+    \item $\frac{\pi}{6}$\\
+    \item $\frac{\pi}{8}$\\
+    \item $\frac{\pi}{4}$\\
  \end{enumerate}
 \end{enumerate}
-\end{document}
+\end{document}                             
+
