--- a/assignment.tex
+++ b/assignment.tex
@@ -68,7 +68,7 @@
     \item $\frac{1}{6}$\\ 
     \item $6$\\
 \end{enumerate}
-\item If $f\brak{x}=\frac{x}{\sin{x}}$ and $g\brak{x}=\frac{x}{\tan{x}}$, where$0<x\leq1$, then in this interval
+\item If $f\brak{x}=\frac{x}{\sin{x}}$ and $g\brak{x}=\frac{x}{\tan{x}}$, where $0<x\leq1$, then in this interval
 	\hfill (1997-2 Marks)
 \begin{enumerate}
 	\item both $f\brak{x}$ and $g\brak{x}$ are increasing functions.
@@ -94,7 +94,7 @@ Which of the following is true ?
     \item Both S and R are correct, but R is not the correct explanation of S.
     \item S is correct and R is correct explanation for S.
     \item S is correct and R is wrong.\\
-s\end{enumerate}
+\end{enumerate}
 
 \item Let $f\brak{x}=\int e^x\brak{x-1}\brak{x-2}dx$. Then $f$ decreases in the interval 
 \hfill (2000S)
@@ -113,7 +113,7 @@ s\end{enumerate}
 \end{enumerate}
 \item Let $f\brak{x}$=
 $\begin{cases}
-|x|, & \text{for}  0<|x| \leq 2\\ 
+|x|, & \text{for}\ 0<|x| \leq 2\\ 
 1, & \text{for}\  x=0
 \end{cases}$then at $x=0$, \\$f$ has
 \hfill (2000S)
@@ -190,7 +190,7 @@ is \hfill (2002S)
     \item $f\brak{x}=x|x|$
     \item $f\brak{x}=|x|$\\
 \end{enumerate}
-\item Tangent is drawn to ellipse $\frac{x^2}{27}+y^2 = 1$ at $\brak{3\sqrt{3}\cos{\theta},\sin{\theta}}$ $\brak{\text{where}  \theta \in \brak{0,\frac{\pi}{2}}}$. Then the value of $\theta$ such that sum of intercepts on axes made by this tangent is minimum, is
+\item Tangent is drawn to ellipse $\frac{x^2}{27}+y^2 = 1$ at $\brak{3\sqrt{3}\cos{\theta},\sin{\theta}}$ $\brak{\text{where}\ \theta \in \brak{0,\frac{\pi}{2}}}$. Then the value of $\theta$ such that sum of intercepts on axes made by this tangent is minimum, is
 \hfill (2003S)
 \begin{enumerate}
     \item $\frac{\pi}{3}$\\
@@ -200,4 +200,5 @@ is \hfill (2002S)
  \end{enumerate}
 \end{enumerate}
 \end{document}                             
+
 
