--- a/assignment1/main.tex
+++ b/assignment1/main.tex
@@ -31,7 +31,7 @@
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
 \begin{enumerate}[start=9]
-\item The slope of tangent to curve y=$f(x)$ at $\sbrak{x,f(x)}$ is $2x + 1$.If the curve passes through the point $\brak{1,2}$, then the area bounded by curve, the $x$ axis and the line $x=1$ is
+\item The slope of tangent to curve y=$f\brak{x}$ at $\sbrak{x,f\brak{x}}$ is $2x + 1$. If the curve passes through the point $\brak{1,2}$, then the area bounded by curve, the $x$ axis and the line $x=1$ is
 \hfill {\brak{1995S}}
 \begin{multicols}{4}
 \begin{enumerate}
@@ -41,16 +41,16 @@
     \item $\displaystyle\frac{6}{1}$\\
 \end{enumerate}
 \end{multicols}
-\item If $f(x)=\displaystyle\frac{x}{\sin{x}}$ and $g(x)=\displaystyle\frac{x}{\tan{x}}$, where$0<x\leq1$, then in this interval
+\item If $f\brak{x}=\displaystyle\frac{x}{\sin{x}}$ and $g\brak{x}=\displaystyle\frac{x}{\tan{x}}$, where $0<x\leq1$, then in this interval
 \hfill \brak{1997-2 Marks}
 \begin{enumerate}
-    \item both $f(x)$ and $g(x)$ are increasing functions.
-    \item both $f(x)$ and $g(x)$ are decreasing functions.
-    \item $f(x)$ is an increasing function.
-    \item $g(x)$ is an increasing function.\\
+    \item both $f\brak{x}$ and $g\brak{x}$ are increasing functions.
+    \item both $f\brak{x}$ and $g\brak{x}$ are decreasing functions.
+    \item $f\brak{x}$ is an increasing function.
+    \item $g\brak{x}$ is an increasing function.\\
 \end{enumerate}
 
-\item The function $f(x)= \sin^4{x}+\cos^4{x}$ increases \\
+\item The function $f\brak{x}= \sin^4{x}+\cos^4{x}$ increases \\
 if \hfill \brak{1999-2 Marks}
 \begin{multicols}{2}
 \begin{enumerate}
@@ -61,9 +61,9 @@ if \hfill \brak{1999-2 Marks}
 \end{enumerate}
 \end{multicols}
 \item Consider the following statements in S and \\
-R \hfill {(2000S)}\\
+R \hfill \brak{2000S}\\
 S: Both $\sin{x}$ and $\cos{x}$ are decreasing functions in the interval $\left(\displaystyle\frac{\pi}{2},\pi\right)$\\
-R: If a differentiable function decreases in a interval $(a,b)$,then its derivative also decreases in $(a,b)$.\\
+R: If a differentiable function decreases in a interval $\brak{a,b}$,then its derivative also decreases in $\brak{a,b}$.\\
 Which of the following is true ?
 \begin{enumerate}
     \item Both S and R are wrong.
@@ -72,7 +72,7 @@ Which of the following is true ?
     \item S is correct and R is wrong.\\
 \end{enumerate}
 
-\item Let $f(x)=\int e^x(x-1)(x-2)dx$. Then $f$ decreases in the interval 
+\item Let $f\brak{x}=\int e^x\brak{x-1}\brak{x-2}dx$. Then $f$ decreases in the interval 
 \hfill \brak{2000S}
 \begin{multicols}{3}
 \begin{enumerate}
@@ -82,7 +82,7 @@ Which of the following is true ?
     \item $(2,+\infty)$\\
 \end{enumerate}
 \end{multicols}
-\item If normal to curve $y=f(x)$ at the point $(3,4)$ makes an angle $\displaystyle\frac{3\pi}{4}$ with the positive $x$-axis, then $f$'(3) = \hfill\brak{2000S}
+\item If normal to curve $y=f\brak{x}$ at the point $\brak{3,4}$ makes an angle $\displaystyle\frac{3\pi}{4}$ with the positive $x$-axis, then $f'\brak{3}$ = \hfill\brak{2000S}
 \begin{multicols}{2}
 \begin{enumerate}
     \item $-1$
@@ -91,9 +91,9 @@ Which of the following is true ?
     \item $1$
 \end{enumerate}
 \end{multicols}
-\item Let $f(x)$=
+\item Let $f\brak{x}$=
 $\begin{cases}
-|x|, & \text{for}  0<|x| \leq 2\\ 
+|x|, & \text{for} \ 0<|x| \leq 2\\ 
 1, & \text{for}\  x=0
 \end{cases}$then at $x=0$, \\$f$ has
 \hfill \brak{2000S}
@@ -111,7 +111,7 @@ $\begin{cases}
     \item $ \sin{x} > x$
     \item $ \log_e{x} > x $\\
 \end{enumerate}
-\item If $f(x)=xe^{x(1-x)}$,then $f(x)$ is 
+\item If $f\brak{x}=xe^{x(1-x)}$,then $f\brak{x}$ is 
 \hfill \brak{2001S}
 \begin{enumerate}
     \item increasing on $\left[-\displaystyle\frac{1}{2},1\right]$\\
@@ -120,7 +120,7 @@ $\begin{cases}
     \item decreasing on $\left[-\displaystyle\frac{1}{2},1\right]$\\\\
 \end{enumerate}
 
-\item The triangle formed by tangent to curve $f(x)=x^2+bx-b$ at the point $(1,1)$ and the coordinate axes, lies in the first quadrant. If its area is $2$, then the value of $b$ is 
+\item The triangle formed by tangent to curve $f\brak{x}=x^2+bx-b$ at the point $(1,1)$ and the coordinate axes, lies in the first quadrant. If its area is $2$, then the value of $b$ is 
 \hfill \brak{2001S}
 \begin{multicols}{4}
 \begin{enumerate}
@@ -130,7 +130,7 @@ $\begin{cases}
     \item $1$\\
 \end{enumerate}
 \end{multicols}
-\item Let $f(x)=(1+b^2)x^2+2bx+1$ and let $m(b)$ be the minimum value of $f(x)$.As $b$ varies, the range of $m(b)$ is 
+\item Let $f\brak{x}=\brak{1+b^2}x^2+2bx+1$ and let $m\brak{b}$ be the minimum value of $f\brak{x}$. As $b$ varies, the range of $m\brak{b}$ is 
 \hfill \brak{2001S}
 \begin{multicols}{4}
 \begin{enumerate}
@@ -141,7 +141,7 @@ $\begin{cases}
 \end{enumerate}
 \end{multicols}
 \item The length of a longest interval in which the function $3 \sin x-4\sin^3x$ is increasing,\\
-is \hfill {(2002S)}
+is \hfill \brak{2002S}
 \begin{multicols}{2}
 \begin{enumerate}
     \item $\displaystyle\frac{\pi}{3}$\\
@@ -151,33 +151,33 @@ is \hfill {(2002S)}
 \end{enumerate}
 \end{multicols}
 \item The point(s) on the curve $y^3+3x^2=12y$ where the tangent is vertical, is(are)
-\hfill {(2002S)}\\
+\hfill \brak{2002S}\\
 \begin{multicols}{2}
 \begin{enumerate}
-    \item $\left(\pm \displaystyle\frac{4}{\sqrt{3}},-2\right)$\\
-    \item $\left(\pm\sqrt{\displaystyle\frac{11}{3}},1\right)$\\
-    \item $(0,0)$\\
-    \item $\left(\pm \displaystyle\frac{4}{\sqrt{3}},2\right)$\\\\
+    \item $\brak{\pm \displaystyle\frac{4}{\sqrt{3}},-2}$\\
+    \item $\brak{\pm\sqrt{\displaystyle\frac{11}{3}},1}$\\
+    \item $\brak{0,0}$\\
+    \item $\brak{\pm \displaystyle\frac{4}{\sqrt{3}},2}$\\\\
 \end{enumerate}
 \end{multicols}
-\item In $[0,1]$ Lagranges Mean Value theorem is NOT applicable to
-\hfill {(2003S)}
+\item In $\sbrak{0,1}$ Lagranges Mean Value theorem is NOT applicable to
+\hfill \brak{2003S}
 
 \begin{enumerate}
-    \item $f(x)$=
+    \item $f\brak{x}$=
     $\begin{cases}
          \displaystyle\frac{1}{2}-x, x<\displaystyle\frac{1}{2}\\
         \left(\displaystyle\frac{1}{2}-x\right)^2, x\geq \displaystyle\frac{1}{2}
     \end{cases}$\\
-     \item $f(x)$=
+     \item $f\brak{x}$=
     $\begin{cases}
         \displaystyle\frac{\sin x}{x}, x\neq 0\\
         1, x=0
     \end{cases}$\\
-    \item $f(x)=x|x|$
-    \item $f(x)= |x|$\\
+    \item $f\brak{x}=x|x|$
+    \item $f\brak{x}= |x|$\\
 \end{enumerate}
-\item Tangent is drawn to ellipse $\displaystyle\displaystyle\frac{x^2}{27}+y^2 = 1$ at ($3\sqrt{3}\cos\theta$,$\sin\theta$)(where $\theta \in $ ($0,\displaystyle\displaystyle\frac{\pi}{2}$)). Then the value of $\theta$ such that sum of intercepts on axes made by this tangent is minimum, is
+\item Tangent is drawn to ellipse $\displaystyle\displaystyle\frac{x^2}{27}+y^2 = 1$ at \brak{3\sqrt{3}\cos\theta,\sin\theta}$\brak{\text{where} \ \theta \in  \brak{0,\displaystyle\displaystyle\frac{\pi}{2}}}$. Then the value of $\theta$ such that sum of intercepts on axes made by this tangent is minimum, is
 \hfill {(2003S)}
 \begin{multicols}{4}
 \begin{enumerate}
@@ -187,7 +187,6 @@ is \hfill {(2002S)}
     \item $\displaystyle\frac{\pi}{4}$\\
  \end{enumerate}
 \end{multicols}
-
+\end{enumerate}
 \end{document}
-
 
