--- a/assignment1/main.tex
+++ b/assignment1/main.tex
@@ -35,13 +35,13 @@
 \hfill {\brak{1995S}}
 \begin{multicols}{4}
 \begin{enumerate}
-    \item $\displaystyle\frac{5}{6}$\\ 
-    \item $\displaystyle\frac{6}{5}$\\
-    \item $\displaystyle\frac{1}{6}$\\ 
-    \item $\displaystyle\frac{6}{1}$\\
+    \item $\frac{5}{6}$\\ 
+    \item $\frac{6}{5}$\\
+    \item $\frac{1}{6}$\\ 
+    \item $\frac{6}{1}$\\
 \end{enumerate}
 \end{multicols}
-\item If $f\brak{x}=\displaystyle\frac{x}{\sin{x}}$ and $g\brak{x}=\displaystyle\frac{x}{\tan{x}}$, where $0<x\leq1$, then in this interval
+\item If $f\brak{x}=\frac{x}{\sin{x}}$ and $g\brak{x}=\frac{x}{\tan{x}}$, where $0<x\leq1$, then in this interval
 \hfill \brak{1997-2 Marks}
 \begin{enumerate}
     \item both $f\brak{x}$ and $g\brak{x}$ are increasing functions.
@@ -54,15 +54,14 @@
 if \hfill \brak{1999-2 Marks}
 \begin{multicols}{2}
 \begin{enumerate}
-    \item $0<x<\displaystyle\frac{\pi}{8}$\\
-    \item $\displaystyle\frac{\pi}{4}<x<\displaystyle\frac{3\pi}{8}$\\
-    \item $\displaystyle\frac{3\pi}{8} <x<\displaystyle\frac{5\pi}{8}$\\
-    \item $\displaystyle\frac{5\pi}{8}<x<\displaystyle\frac{3\pi}{4}$\\
+    \item $0<x<\frac{\pi}{8}$\\
+    \item $\frac{\pi}{4}<x<\frac{3\pi}{8}$\\
+    \item $\frac{3\pi}{8} <x<\frac{5\pi}{8}$\\
+    \item $\frac{5\pi}{8}<x<\frac{3\pi}{4}$\\
 \end{enumerate}
 \end{multicols}
-\item Consider the following statements in S and \\
-R \hfill \brak{2000S}\\
-S: Both $\sin{x}$ and $\cos{x}$ are decreasing functions in the interval $\left(\displaystyle\frac{\pi}{2},\pi\right)$\\
+\item Consider the following statements in S and R \hfill \brak{2000S}\\
+S: Both $\sin{x}$ and $\cos{x}$ are decreasing functions in the interval $\brak{\frac{\pi}{2},\pi}$\\
 R: If a differentiable function decreases in a interval $\brak{a,b}$,then its derivative also decreases in $\brak{a,b}$.\\
 Which of the following is true ?
 \begin{enumerate}
@@ -76,25 +75,25 @@ Which of the following is true ?
 \hfill \brak{2000S}
 \begin{multicols}{3}
 \begin{enumerate}
-    \item $(-\infty,-2)$
-    \item $(-2,-1)$
-    \item $(1,2)$
-    \item $(2,+\infty)$\\
+    \item $\brak{-\infty,-2}$
+    \item $\brak{-2,-1}$
+    \item $\brak{1,2}$
+    \item $\brak{2,+\infty}$\\
 \end{enumerate}
 \end{multicols}
-\item If normal to curve $y=f\brak{x}$ at the point $\brak{3,4}$ makes an angle $\displaystyle\frac{3\pi}{4}$ with the positive $x$-axis, then $f'\brak{3}$ = \hfill\brak{2000S}
+\item If normal to curve $y=f\brak{x}$ at the point $\brak{3,4}$ makes an angle $\frac{3\pi}{4}$ with the positive $x$-axis, then $f^{\prime}\brak{3}$ = \hfill\brak{2000S}
 \begin{multicols}{2}
 \begin{enumerate}
     \item $-1$
-    \item -$\displaystyle\frac{3}{4}$\\
-    \item $\displaystyle\frac{4}{3}$
+    \item -$\frac{3}{4}$\\
+    \item $\frac{4}{3}$
     \item $1$
 \end{enumerate}
 \end{multicols}
 \item Let $f\brak{x}$=
 $\begin{cases}
-|x|, & \text{for} \ 0<|x| \leq 2\\ 
-1, & \text{for}\  x=0
+|x|, & \text{for } \ 0<|x| \leq 2\\ 
+1, & \text{for }\  x=0
 \end{cases}$then at $x=0$, \\$f$ has
 \hfill \brak{2000S}
 \begin{enumerate}
@@ -103,24 +102,24 @@ $\begin{cases}
     \item a local minimum
     \item no extremum\\
 \end{enumerate}
-\item For all $x\in(0,1)$
+\item For all $x\in\brak{0,1}$
 \hfill \brak{2000S}
 \begin{enumerate}
     \item $e^{x} <1+x$
-    \item $\log_e{(1+x)} < x$
+    \item $\log_e{\brak{1+x}} < x$
     \item $ \sin{x} > x$
     \item $ \log_e{x} > x $\\
 \end{enumerate}
-\item If $f\brak{x}=xe^{x(1-x)}$,then $f\brak{x}$ is 
+\item If $f\brak{x}=xe^{x\brak{1-x}}$,then $f\brak{x}$ is 
 \hfill \brak{2001S}
 \begin{enumerate}
-    \item increasing on $\left[-\displaystyle\frac{1}{2},1\right]$\\
-    \item decreasing on R
-    \item increasing on R
-    \item decreasing on $\left[-\displaystyle\frac{1}{2},1\right]$\\\\
+    \item increasing on $\sbrak{-\frac{1}{2},1}$\\
+    \item decreasing on $\mathbb{R}$
+    \item increasing on $\mathbb{R}$
+    \item decreasing on $\sbrak{-\frac{1}{2},1}$\\\\
 \end{enumerate}
 
-\item The triangle formed by tangent to curve $f\brak{x}=x^2+bx-b$ at the point $(1,1)$ and the coordinate axes, lies in the first quadrant. If its area is $2$, then the value of $b$ is 
+\item The triangle formed by tangent to curve $f\brak{x}=x^2+bx-b$ at the point $\brak{1,1}$ and the coordinate axes, lies in the first quadrant. If its area is $2$, then the value of $b$ is 
 \hfill \brak{2001S}
 \begin{multicols}{4}
 \begin{enumerate}
@@ -135,18 +134,18 @@ $\begin{cases}
 \begin{multicols}{4}
 \begin{enumerate}
     \item $\sbrak{0,1}$\\
-    \item $\left(0,\displaystyle\frac{1}{2}\right]$\\
-    \item $\left[\displaystyle\frac{1}{2},1\right]$\\
-    \item $(0,1]$\\
+    \item $\lbrak{\rsbrak{0,\frac{1}{2}}}$\\
+    \item $\sbrak{\frac{1}{2},1}$\\
+    \item $\lbrak{\rsbrak{0,1}}$\\
 \end{enumerate}
 \end{multicols}
 \item The length of a longest interval in which the function $3 \sin x-4\sin^3x$ is increasing,\\
 is \hfill \brak{2002S}
 \begin{multicols}{2}
 \begin{enumerate}
-    \item $\displaystyle\frac{\pi}{3}$\\
-    \item $\displaystyle\frac{\pi}{2}$\\
-    \item $\displaystyle\frac{3\pi}{2}$\\
+    \item $\frac{\pi}{3}$\\
+    \item $\frac{\pi}{2}$\\
+    \item $\frac{3\pi}{2}$\\
     \item $\pi$
 \end{enumerate}
 \end{multicols}
@@ -154,10 +153,10 @@ is \hfill \brak{2002S}
 \hfill \brak{2002S}\\
 \begin{multicols}{2}
 \begin{enumerate}
-    \item $\brak{\pm \displaystyle\frac{4}{\sqrt{3}},-2}$\\
-    \item $\brak{\pm\sqrt{\displaystyle\frac{11}{3}},1}$\\
+    \item $\brak{\pm \frac{4}{\sqrt{3}},-2}$\\
+    \item $\brak{\pm\sqrt{\frac{11}{3}},1}$\\
     \item $\brak{0,0}$\\
-    \item $\brak{\pm \displaystyle\frac{4}{\sqrt{3}},2}$\\\\
+    \item $\brak{\pm \frac{4}{\sqrt{3}},2}$\\\\
 \end{enumerate}
 \end{multicols}
 \item In $\sbrak{0,1}$ Lagranges Mean Value theorem is NOT applicable to
@@ -166,27 +165,28 @@ is \hfill \brak{2002S}
 \begin{enumerate}
     \item $f\brak{x}$=
     $\begin{cases}
-         \displaystyle\frac{1}{2}-x, x<\displaystyle\frac{1}{2}\\
-        \left(\displaystyle\frac{1}{2}-x\right)^2, x\geq \displaystyle\frac{1}{2}
+         \frac{1}{2}-x, x<\frac{1}{2}\\
+        \brak{\frac{1}{2}-x}^2, x\geq \frac{1}{2}
     \end{cases}$\\
      \item $f\brak{x}$=
     $\begin{cases}
-        \displaystyle\frac{\sin x}{x}, x\neq 0\\
+        \frac{\sin x}{x}, x\neq 0\\
         1, x=0
     \end{cases}$\\
     \item $f\brak{x}=x|x|$
     \item $f\brak{x}= |x|$\\
 \end{enumerate}
-\item Tangent is drawn to ellipse $\displaystyle\displaystyle\frac{x^2}{27}+y^2 = 1$ at \brak{3\sqrt{3}\cos\theta,\sin\theta}$\brak{\text{where} \ \theta \in  \brak{0,\displaystyle\displaystyle\frac{\pi}{2}}}$. Then the value of $\theta$ such that sum of intercepts on axes made by this tangent is minimum, is
-\hfill {(2003S)}
+\item Tangent is drawn to ellipse $\frac{x^2}{27}+y^2 = 1$ at \brak{3\sqrt{3}\cos\theta,\sin\theta}$\brak{\text{where } \theta \in  \brak{0,\frac{\pi}{2}}}$. Then the value of $\theta$ such that sum of intercepts on axes made by this tangent is minimum, is
+\hfill \brak{2003S}
 \begin{multicols}{4}
 \begin{enumerate}
-    \item $\displaystyle\frac{\pi}{3}$\\
-    \item $\displaystyle\frac{\pi}{6}$\\
-    \item $\displaystyle\frac{\pi}{8}$\\
-    \item $\displaystyle\frac{\pi}{4}$\\
+    \item $\frac{\pi}{3}$\\
+    \item $\frac{\pi}{6}$\\
+    \item $\frac{\pi}{8}$\\
+    \item $\frac{\pi}{4}$\\
  \end{enumerate}
 \end{multicols}
 \end{enumerate}
 \end{document}
+
 
