--- a/assignment1/main.tex
+++ b/assignment1/main.tex
@@ -59,7 +59,7 @@
     \item $\frac{5\pi}{8}<x<\frac{3\pi}{4}$
 \end{enumerate}
 \end{multicols}
-\item Consider the following statements in S and R \hfill \brak{2000S}
+\item Consider the following statements in S and R \hfill \brak{2000S}\\
 S: Both $\sin{x}$ and $\cos{x}$ are decreasing functions in the interval $\brak{\frac{\pi}{2},\pi}$\\
 R: If a differentiable function decreases in a interval $\brak{a,b}$,then its derivative also decreases in $\brak{a,b}$.\\
 Which of the following is true ?
