--- a/assignment1/main.tex
+++ b/assignment1/main.tex
@@ -91,7 +91,7 @@ Which of the following is true ?
 \end{multicols}
 \item Let $f\brak{x}$=
 $\begin{cases}
-|x|, & \text{for } \ 0<|x| \leq 2\\ 
+|x|, & \text{for } \ 0< \abs x \leq 2\\ 
 1, & \text{for }\  x=0
 \end{cases}$then at $x=0$, $f$ has
 \hfill \brak{2000S}
