--- a/1-1.6-27/main.tex
+++ b/1-1.6-27/main.tex
@@ -42,7 +42,8 @@
 \vspace{3cm}
 
 \title{1.1.6.27}
-\author{EE24BTECH11057 - SHIVAM SHILVANT*}
+\author{EE24BTECH11057 - SHIVAM SHILVANT*
+}
 % \maketitle
 % \newpage
 % \bigskip
@@ -59,25 +60,29 @@
 
 
 \textbf{Question}:\\
-Prove that the three points  $\brak{-4,6,10}$, $\brak{2,4,6}$ and $\brak{14,0,-2}$ are collinear.\\
-If the points are collinear , then their determinant should equal to 0.
-\begin{align}
- \mydet {-4 & 6 & 10 \\ 2 & 4 & 6 \\ 14 & 0 & -2} = 0 \label{1.6.9.1}
-\end{align}
-expanding the det by column 3.
-\begin{align}
- \brak{-2}\mydet {-4 & 6 \\ 2 & 4} - 6\mydet{ -4 & 6 \\14 & 0 } + 10\mydet { 2 & 4 \\ 14 & 0 } &= 0& \\
- \brak{-2}\brak{-28} - \brak{6}\brak{-84} + \brak{10}\brak{-56} &= 0& \\
- 56 + 504 - 560 &= 0& \\
- 0 &= 0& \\
-\end{align}
-So, as the determinant is zero , All the three points are collinear.
-\begin{figure}[h!]
-   \centering
-   \includegraphics[width=0.7\linewidth]{figs/Figure_1.png}
-   \caption{Stem Plot of y\brak{n}}
-   \label{stemplot}
-\end{figure}
-\end{document}  
-\end{document}
+Prove that the three points $\brak{-4, 6, 10}$, $\brak{2, 4, 6}$ and $\brak{14, 0, -2}$ are collinear.\\ 
+\textbf{Solution: }\\
+    \begin{table}[h!]    
+      \centering
+      \input{tables/table1.tex}
+      \caption{}
+    \end{table}\\
+If the rank of a matrix $M$ is 1, then the points A,B,C are collinear. 
+    \begin{align}
+        Rank\brak{M} = 1\label{eq1.1.6.22.1}
+    \end{align}
+Computing matrix $M$
+    \begin{align}
+        M = \myvec{6 & -2 & -4 \\ 18 & \ -6 & -12}
+        \xleftrightarrow[]{R_2 \rightarrow {R_2-3R_1}}  \label{eq1.1.6.22.2}
+        \myvec{6 & -2 & -4 \\ 0 & 0 & 0}
+    \end{align}
+Thus we can conclude that the rank of matrix $M$ is 1 and thus $A,B,C$ are collinear. \\i.e.the given points are collinear.\\
+    \begin{figure}[h]
+        \centering
+       \includegraphics[width=0.7\linewidth]{figs/fig1.png}
+       \caption{}
+       \label{graph}
+    \end{figure}
 
+\end{document} 
