--- a/1-1.6-27/main.tex
+++ b/1-1.6-27/main.tex
@@ -77,7 +77,7 @@ Computing matrix $M$
         \xleftrightarrow[]{R_2 \rightarrow {R_2-3R_1}}  \label{eq1.1.6.22.2}
         \myvec{6 & -2 & -4 \\ 0 & 0 & 0}
     \end{align}
-Thus we can conclude that the rank of matrix $M$ is 1 and thus $A,B,C$ are collinear. \\i.e.the given points are collinear.\\
+Thus we can conclude that the rank of matrix $M$ is 1 and thus $A,B,C$ are collinear. \\i.e., the given points are collinear.\\
     \begin{figure}[h]
         \centering
        \includegraphics[width=0.7\linewidth]{figs/fig1.png}
