--- a/1-1.6-27/tables/table1.tex
+++ b/1-1.6-27/tables/table1.tex
@@ -3,11 +3,11 @@
         \hline
             \textbf{Variable} & \textbf{Description} & \textbf{Formula} \\ 
         \hline
-            $A$   & A 3d Point to be plotted & $A = \myvec{-4 & 6 & 10}$ \\ 
+            $A$   & A Point & $A = \myvec{-4 & 6 & 10}$ \\ 
         \hline
-            $B$   &  A 3d Point to be plotted &  $B = \myvec{2 & 4 & 6}$\\ 
+            $B$   & A Point &  $B = \myvec{2 & 4 & 6}$\\ 
         \hline
-            $C$   & A 3d Point to be plotted & $C  = \myvec{14& 0& -2}$\\ 
+            $C$   & A Point & $C  = \myvec{14& 0& -2}$\\ 
         \hline
             $M$   & It is a matrix comprising of vectors $B-A$ and $C-A$ & $M$ = \textbf{$\sbrak{B-A,C-A}$}\\ 
         \hline
