--- a/1-1.6-27/main.tex
+++ b/1-1.6-27/main.tex
@@ -80,8 +80,8 @@ Computing matrix $M$
 Thus we can conclude that the rank of matrix $M$ is 1 and thus $A,B,C$ are collinear. \\i.e., the given points are collinear.\\
     \begin{figure}[h]
         \centering
-       \includegraphics[width=0.7\linewidth]{figs/fig1.png}
-       \caption{}
+       \includegraphics[width=1.0\linewidth]{figs/Figure_1.png}
+       \caption{A,B and C are collinear}
        \label{graph}
     \end{figure}
 
