--- a/gate1/main.tex
+++ b/gate1/main.tex
@@ -42,7 +42,7 @@
 \bibliographystyle{IEEEtran}
 \vspace{3cm}
 
-\title{1.1.6.27}
+\title{2011-XE-'53-65'}
 \author{EE24BTECH11057 - SHIVAM SHILVANT*
 }
 % \maketitle
