--- a/gate1/main.tex
+++ b/gate1/main.tex
@@ -139,17 +139,17 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{enumerate}
 \end{multicols}
 
-\item It takes 4 h for carburising a steel at $900^{\circ}C $. If the same carburising is to be accomplished in 2 h, what should be the temperature? The activation energy of diffusion of carbon in the steel is 151 kJ mol$^{-1}$.
+\item It takes 4 h for carburising a steel at $900\degree\text{C} $. If the same carburising is to be accomplished in 2 h, what should be the temperature? The activation energy of diffusion of carbon in the steel is 151 kJ mol$^{-1}$.
 \begin{multicols}{4}
 \begin{enumerate}
-    \item $850^{\circ}C$
-    \item $955^{\circ}C$
-    \item $1015^{\circ}C$
-    \item $1228^{\circ}C$
+    \item $850\degree\text{C}$
+    \item $955\degree\text{C}$
+    \item $1015\degree\text{C}$
+    \item $1228\degree\text{C}$
 \end{enumerate}
 \end{multicols}
 
-\item A steel specimen $\brak{12 \text{mm diameter and} 60 \text{mm length}}$ undergoes elastic deformation under tension. The deformed specimen experiences a longitudinal strain of 0.001. If the Poisson's ratio is 0.3, the diameter of the deformed specimen \brak{\text{in mm}} is 
+\item A steel specimen $\brak{12 \text{mm diameter and}\ 60 \ \text{mm length}}$ undergoes elastic deformation under tension. The deformed specimen experiences a longitudinal strain of 0.001. If the Poisson's ratio is 0.3, the diameter of the deformed specimen \brak{\text{in mm}} is 
 \begin{multicols}{4}
 \begin{enumerate}
     \item 12.0120
@@ -162,7 +162,7 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \textbf{Common Data Questions}\\
 
 \textbf{Common Data for Questions 17 and 18:}\\
- The first peak in the powder X-ray diffraction pattern of an FCC metal appears at a Bragg angle of $19.2^{\circ}$. The wavelength of Cu-K$_{\alpha}$ radiation used is 0.154 nm.\\
+ The first peak in the powder X-ray diffraction pattern of an FCC metal appears at a Bragg angle of $19.2\degree$. The wavelength of Cu-K$_{\alpha}$ radiation used is 0.154 nm.\\
 \item The lattice parameter of the metal \brak{\text{in nm}} is
 \begin{enumerate}
 \begin{multicols}{4}
@@ -174,7 +174,7 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{enumerate}
 
 
-\item The full width at half maximum \brak{\text{FWHM}} of the first peak is $0.35^{\circ}$.
+\item The full width at half maximum \brak{\text{FWHM}} of the first peak is $0.35\degree$.
  Ignoring micro-strain and instrumental broadening, the crystallite size of the sample \brak{\text{in nm}} is 
 \begin{enumerate}
 \begin{multicols}{4}
