--- a/gate1/main.tex
+++ b/gate1/main.tex
@@ -60,7 +60,7 @@
 \renewcommand{\thetable}{\theenumi}
 
 \begin{enumerate}
-\setcounter{enumi}{9}
+
 
 \item A plain carbon steel was annealed just above the eutectoid temperature. Microstructural analysis revealed that the proeutectoid ferrite content was 30 wt \% .The eutectoid reaction in the iron-iron carbide phase diagram is given below :
 
@@ -160,7 +160,6 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{multicols}
 
 \textbf{Common Data Questions}\\
-
 \textbf{Common Data for Questions 17 and 18:}\\
  The first peak in the powder X-ray diffraction pattern of an FCC metal appears at a Bragg angle of $19.2\degree$. The wavelength of Cu-K$_{\alpha}$ radiation used is 0.154 nm.\\
 \item The lattice parameter of the metal \brak{\text{in nm}} is
@@ -185,10 +184,11 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{multicols}
 \end{enumerate}
 
-\textbf{Common Data for Questions 19 and 20:}\\
- For an intrinsic semiconductor, the mobilities of free electrons and holes are 0.14 m$^{2}$V$^{-1}$s$^{-1}$
+\section{\textbf{Common Data for Questions 10 and 11:}}\label{common_data}\\
+For an intrinsic semiconductor, the mobilities of free electrons and holes are 0.14 m$^{2}$V$^{-1}$s$^{-1}$
  and 0.038 m$^{2}$V$^{-1}$s$^{-1}$, respectively. Its bandgap is 1.107 eV and electrical conductivity at 300 K is $3.99 \times 10^{-4} \Omega ^{-1}m^{-1}$.  \\
-\item The free electron concentration \brak{\text{in m}^{-3}} at 300 K is
+\item\ref{common_data} The free electron concentration \brak{\text{in m}^{-3}} at 300 K is
+
 \begin{enumerate}
 \begin{multicols}{4}
     \item $ 13.99 \times 10^{15}$
@@ -197,7 +197,8 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
     \item $ 27.98 \times 10^{17}$
 \end{multicols}
 \end{enumerate}
-\item What is the temperature at which the conductivity of the semiconductor is $0.399 \Omega^{-1}\text{m}^{-1}$?
+
+\item\ref{common_data} What is the temperature at which the conductivity of the semiconductor is $0.399 \Omega^{-1}\text{m}^{-1}$?
 \begin{multicols}{4}
 \begin{enumerate}
     \item 343 K
@@ -207,10 +208,9 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{enumerate}
 \end{multicols}
 
-\textbf{Linked Answer Questions}\\
-\textbf{Statement for Linked Answers Questions 21 and 22:}\\
-A continuous and aligned glass fibre reinforced composite has a modulus of elasticity of 150 GPa in the longitudinal direction. The matrix is a polyester resin with a modulus of 4.5 GPa. The glass fibre has a modulus of 340 GPa.\\
-\item The volume fraction of the glass fibres is
+\section{\textbf{Linked Answer Questions}}\label{Linked_questions}\\
+\textbf{Statement for Linked Answers Questions 12 and 13:} \\ A continuous and aligned glass fibre reinforced composite has a modulus of elasticity of 150 GPa in the longitudinal direction. The matrix is a polyester resin with a modulus of 4.5 GPa. The glass fibre has a modulus of 340 GPa.\\
+\item\ref{Linked_questions} The volume fraction of the glass fibres is
 \begin{multicols}{4}
 \begin{enumerate}
     \item $0.398$
@@ -219,7 +219,7 @@ A continuous and aligned glass fibre reinforced composite has a modulus of elast
     \item $0.566$
 \end{enumerate}
 \end{multicols}
-\item If the cross-sectional area of the composite is 300
+\item\ref{Linked_questions} If the cross-sectional area of the composite is 300
  mm$^{2}$, and a stress of 100 MPa is applied in the longitudinal direction, what will be the total load \brak{\text{in kN}} carried by the glass fibres?  
 \begin{multicols}{2}
 \begin{enumerate}
