--- a/gate1/main.tex
+++ b/gate1/main.tex
@@ -160,9 +160,9 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{multicols}
 
 \textbf{Common Data Questions}\\
-\textbf{Common Data for Questions 17 and 18:}\\
+\textbf{Common Data for Questions \ref{common_data1} and \ref{common_data2}:}\\
  The first peak in the powder X-ray diffraction pattern of an FCC metal appears at a Bragg angle of $19.2\degree$. The wavelength of Cu-K$_{\alpha}$ radiation used is 0.154 nm.\\
-\item The lattice parameter of the metal \brak{\text{in nm}} is
+\item\label{common_data1} The lattice parameter of the metal \brak{\text{in nm}} is
 \begin{enumerate}
 \begin{multicols}{4}
     \item $ 0.4505$
@@ -173,7 +173,7 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{enumerate}
 
 
-\item The full width at half maximum \brak{\text{FWHM}} of the first peak is $0.35\degree$.
+\item\label{common_data2} The full width at half maximum \brak{\text{FWHM}} of the first peak is $0.35\degree$.
  Ignoring micro-strain and instrumental broadening, the crystallite size of the sample \brak{\text{in nm}} is 
 \begin{enumerate}
 \begin{multicols}{4}
@@ -184,10 +184,10 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{multicols}
 \end{enumerate}
 
-\section{\textbf{Common Data for Questions 10 and 11:}}\label{common_data}\\
+\section{\textbf{Common Data for Questions \ref{common_data3} and \ref{common_data4}:}}
 For an intrinsic semiconductor, the mobilities of free electrons and holes are 0.14 m$^{2}$V$^{-1}$s$^{-1}$
  and 0.038 m$^{2}$V$^{-1}$s$^{-1}$, respectively. Its bandgap is 1.107 eV and electrical conductivity at 300 K is $3.99 \times 10^{-4} \Omega ^{-1}m^{-1}$.  \\
-\item\ref{common_data} The free electron concentration \brak{\text{in m}^{-3}} at 300 K is
+\item\label{common_data3} The free electron concentration \brak{\text{in m}^{-3}} at 300 K is
 
 \begin{enumerate}
 \begin{multicols}{4}
@@ -198,7 +198,7 @@ For an intrinsic semiconductor, the mobilities of free electrons and holes are 0
 \end{multicols}
 \end{enumerate}
 
-\item\ref{common_data} What is the temperature at which the conductivity of the semiconductor is $0.399 \Omega^{-1}\text{m}^{-1}$?
+\item\label{common_data4} What is the temperature at which the conductivity of the semiconductor is $0.399 \Omega^{-1}\text{m}^{-1}$?
 \begin{multicols}{4}
 \begin{enumerate}
     \item 343 K
@@ -208,9 +208,9 @@ For an intrinsic semiconductor, the mobilities of free electrons and holes are 0
 \end{enumerate}
 \end{multicols}
 
-\section{\textbf{Linked Answer Questions}}\label{Linked_questions}\\
-\textbf{Statement for Linked Answers Questions 12 and 13:} \\ A continuous and aligned glass fibre reinforced composite has a modulus of elasticity of 150 GPa in the longitudinal direction. The matrix is a polyester resin with a modulus of 4.5 GPa. The glass fibre has a modulus of 340 GPa.\\
-\item\ref{Linked_questions} The volume fraction of the glass fibres is
+\section{\textbf{Linked Answer Questions}}
+\textbf{Statement for Linked Answers Questions \ref{Linked_questions1} and \ref{Linked_questions2}:} \\ A continuous and aligned glass fibre reinforced composite has a modulus of elasticity of 150 GPa in the longitudinal direction. The matrix is a polyester resin with a modulus of 4.5 GPa. The glass fibre has a modulus of 340 GPa.\\
+\item\label{Linked_questions1} The volume fraction of the glass fibres is
 \begin{multicols}{4}
 \begin{enumerate}
     \item $0.398$
@@ -219,7 +219,7 @@ For an intrinsic semiconductor, the mobilities of free electrons and holes are 0
     \item $0.566$
 \end{enumerate}
 \end{multicols}
-\item\ref{Linked_questions} If the cross-sectional area of the composite is 300
+\item\label{Linked_questions2} If the cross-sectional area of the composite is 300
  mm$^{2}$, and a stress of 100 MPa is applied in the longitudinal direction, what will be the total load \brak{\text{in kN}} carried by the glass fibres?  
 \begin{multicols}{2}
 \begin{enumerate}
