--- a/gate1/main.tex
+++ b/gate1/main.tex
@@ -184,7 +184,7 @@ The carbon content of the steel $\brak{\text{in wt}\%}$ is
 \end{multicols}
 \end{enumerate}
 
-\section{\textbf{Common Data for Questions \ref{common_data3} and \ref{common_data4}:}}
+\textbf{Common Data for Questions \ref{common_data3} and \ref{common_data4}:}\\
 For an intrinsic semiconductor, the mobilities of free electrons and holes are 0.14 m$^{2}$V$^{-1}$s$^{-1}$
  and 0.038 m$^{2}$V$^{-1}$s$^{-1}$, respectively. Its bandgap is 1.107 eV and electrical conductivity at 300 K is $3.99 \times 10^{-4} \Omega ^{-1}m^{-1}$.  \\
 \item\label{common_data3} The free electron concentration \brak{\text{in m}^{-3}} at 300 K is
@@ -208,7 +208,7 @@ For an intrinsic semiconductor, the mobilities of free electrons and holes are 0
 \end{enumerate}
 \end{multicols}
 
-\section{\textbf{Linked Answer Questions}}
+{\textbf{Linked Answer Questions}\\
 \textbf{Statement for Linked Answers Questions \ref{Linked_questions1} and \ref{Linked_questions2}:} \\ A continuous and aligned glass fibre reinforced composite has a modulus of elasticity of 150 GPa in the longitudinal direction. The matrix is a polyester resin with a modulus of 4.5 GPa. The glass fibre has a modulus of 340 GPa.\\
 \item\label{Linked_questions1} The volume fraction of the glass fibres is
 \begin{multicols}{4}
